--- a/cathovroum/package.json
+++ b/cathovroum/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.30",
-    "autoprefixer": "^10.4.15",
-    "@clerk/nextjs": "^6.28.1"
+    "autoprefixer": "^10.4.15"
   }
 }
